# resource/sys_user.go
@@ -5,3 +5,7 @@ import "github.com/isjyi/os/model"
 type SysUserResource struct {
 	User model.User `json:"user"`
 }
+
+type SysLoginResource struct {
+	Token string `json:"token"`
+}
